<resources>
    <string name="app_name">My Movies Collection</string>
    <string name="add_new_movie">Add a new movie</string>
    <string name="delete_all_movies">Delete all movies</string>
    <string name="share">Share</string>
    <string name="item">Item</string>
    <string name="search">Search</string>
    <string name="sort_from_newest_to_older">Sort by release year, newest to oldest</string>
    <string name="sort_from_oldest_to_newest">Sort by release year, oldest to newest</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="movie_title">Enter the movie title</string>
    <string name="release_date"><u>Release date:</u></string>
    <string name="pick_the_release_date">Pick the release date</string>
    <string name="duration"><u>Runtime:</u></string>
    <string name="enter_the_movie_duration_in_minutes">Enter the movie runtime in minutes</string>
    <string name="director"><u>Director by:</u></string>
    <string name="enter_director_name">Enter director name</string>
    <string name="writer"><u>Writer by:</u></string>
    <string name="enter_writer_name">Enter writer name</string>
    <string name="actors"><u>Actors:</u></string>
    <string name="enter_the_actors_name_separated_by_a_comma">Enter the actors name, separated by a comma</string>
    <string name="storyline1"><u>PLOT</u></string>
    <string name="storyline">Enter the movie plot</string>
    <string name="url_download_image">URL Image Download:</string>
    <string name="enter_an_url_to_download_the_movie_jacket">Enter an URL to download the movie poster</string>
    <string name="show">Show</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="movie_poster">Movie poster</string>
    <string name="title">TITLE</string>
    <string name="url">URL</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="my_movies_collection">My Movies Collection</string>
    <string name="splashscreen_image">SplashScreen Image</string>
    <string name="animation">Animation</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="genre"><u>Genre:</u></string>
    <string name="biography">Biography</string>
    <string name="comedy">Comedy</string>
    <string name="drama">Drama</string>
    <string name="fantasy">Fantasy</string>
    <string name="history">History</string>
    <string name="crime">Crime</string>
    <string name="horror">Horror</string>
    <string name="thriller">Thriller</string>
    <string name="romance">Romance</string>
    <string name="western">Western</string>
    <string name="war">War</string>
    <string name="science_fiction">Science-Fiction</string>
    <string name="go">Go</string>
    <string name="enter_movie_name">Enter movie name</string>
    <string name="search_movie">Search</string>
    <string name="exit_from_the_app">Exit from the app</string>
    <string name="or_take_photo">Or take photo</string>
    <string name="movie_s_poster">movie\'s poster</string>
    <string name="year">Year</string>
    <string name="search_image">search image</string>
    <string name="string_sort_from_oldest_to_newest" />
    <string name="watched_state">watched_state</string>
    <string name="delete_only_watched_movies">Delete only watched Movies</string>
    <string name="see_only_not_watched_movies">See only not watched movies</string>
    <string name="search_a_movie">Search a movie</string>
    <string name="see_all_movies">See all movies</string>
    <string name="see_only_watched_movies">See only watched movies</string>
    <string name="from_camera">From camera</string>
    <string name="from_url">From URL</string>
    <string name="open_gallery">Open gallery</string>

</resources>
