<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/add_new_movie"
        android:id="@+id/addMovie"
        android:icon="@drawable/add"
        app:showAsAction="always" />

    <item android:title="@string/delete_all_movies"
        android:id="@+id/deleteAllMovies"
        android:icon="@drawable/delete1"
        app:showAsAction="ifRoom" />

    <item android:title="@string/delete_only_watched_movies"
        android:id="@+id/deleteWatchedMovies" />
    <item android:title="@string/see_all_movies"
        android:id="@+id/seeAll" />
    <item android:title="@string/see_only_not_watched_movies"
        android:id="@+id/see_nowatched_movies" />
    <item android:title="@string/see_only_watched_movies"
        android:id="@+id/see_watch" />
    <item android:title="@string/search_a_movie"
        android:id="@+id/search_movie" />
    <item android:title="@string/sort_by_name"
        android:id="@+id/sortbyname" />
    <item android:id="@+id/sort_from_newest_to_oldest"
        android:title="@string/sort_from_newest_to_older" />
    <item android:title="@string/sort_from_oldest_to_newest"
        android:id="@+id/sort_from_oldest_to_newest" />
    <item android:title="@string/exit_from_the_app"
        android:id="@+id/exit"
        android:icon="@drawable/exit_button"
        app:showAsAction="always" />
    <!--
       <item android:title="@string/search"
           android:id="@+id/search"
           android:icon="@drawable/search"
           app:showAsAction="ifRoom|collapseActionView"
           app:actionViewClass="android.support.v7.widget.SearchView"
            />

       android:actionViewClass="android.widget.SearchView"


       android:id="@+id/searchView"
           app:actionViewClass="android.support.v7.widget.SearchView"
           android:icon="@drawable/ic_action_search_inverse"
           app:showAsAction="ifRoom|collapseActionView"
           android:title="@string/search"
       -->
    <!--
    <group >

        <item android:title="@string/sort_by_name"
            android:id="@+id/sortByName" />
        <item android:id="@+id/sort_from_newest_to_oldest"
            android:title="@string/sort_from_newest_to_older" />
        <item android:title="@string/sort_from_oldest_to_newest"
            android:id="@+id/sort_from_oldest_to_newest" />

    </group>
-->
</menu>