<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:background="@drawable/listview_drawable">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_height="120dp">

        <ImageView
            android:id="@+id/posterIV"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:contentDescription="@string/movie_s_poster"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:background="@drawable/listview_drawable"
            android:layout_gravity="center" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:weightSum="2.3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1.14"
                android:weightSum="3">

                <TextView
                    android:text="@string/movie_title"
                    android:layout_height="match_parent"
                    android:id="@+id/titleTV"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:gravity="center_vertical|start"
                    android:ellipsize="marquee"
                    android:layout_width="0dp"
                    android:layout_weight="2.5"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:lines="1" />

                <ImageButton
                    android:layout_height="match_parent"
                    android:id="@+id/imageButton2"
                    android:contentDescription="@string/watched_state"
                    android:background="@drawable/watched_drawable"
                    android:layout_gravity="right|end"
                    app:srcCompat="@drawable/not_watched_black"
                    android:scaleType="fitCenter"
                    android:layout_width="0dp"
                    android:layout_weight="0.5" />

            </LinearLayout>

            <TextView
                    android:text="@string/genre"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/genreTV"
                    android:layout_weight="0.5"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:gravity="top|start"
                android:ellipsize="marquee"
                android:lines="1"
                android:paddingStart="10dp"
                android:textStyle="normal|bold"
                android:paddingEnd="10dp" />

            <TextView
                android:text="@string/year"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/yearTV"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:gravity="top|start"
                android:layout_weight="0.5"
                android:layout_marginBottom="7dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textStyle="normal|bold" />
            <View
                android:layout_width="match_parent"
                android:src="@android:drawable/divider_horizontal_bright"
                android:background="#b30000"
                android:layout_height="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:id="@+id/view"
                android:layout_marginBottom="10dp" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>

