<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_movie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.project1v2mymoviescollection.Activities.ViewMovieActivity"
    android:background="@drawable/background01">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp">

            <ImageView
                android:id="@+id/afficheIV"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3"
                android:layout_marginTop="50dp">

                <TextView
                    android:text="@string/release_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/date"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/dateTV"
                    android:layout_weight="2"
                    android:textSize="18sp"
                    android:gravity="center_vertical|start"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/runtime"
                    android:layout_weight="1"
                    android:text="@string/duration"
                    android:textSize="20sp"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/runtimeTV"
                    android:layout_weight="2"
                    android:textSize="18sp"
                    android:gravity="start"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3">

                <TextView
                    android:text="@string/director"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/director"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="#ffffff" />

                <TextView
                    android:text=""
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/directorTV"
                    android:layout_weight="2"
                    android:textSize="18sp"
                    android:gravity="start"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3">

                <TextView
                    android:text="@string/writer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/writer"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="#ffffff" />

                <TextView
                    android:text=""
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/writerTV"
                    android:layout_weight="2"
                    android:textSize="18sp"
                    android:gravity="start"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3">

                <TextView
                    android:text="@string/actors"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/actors"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="#ffffff" />

                <TextView
                    android:text=""
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/actorsTV"
                    android:layout_weight="2"
                    android:textSize="18sp"
                    android:gravity="start"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3">

                <TextView
                    android:text="@string/genre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/genre"
                    android:layout_weight="1"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/genreTV"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:textSize="18sp"
                    android:lines="2"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <TextView
                android:text="@string/storyline1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/textView10"
                android:textSize="22sp"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="5dp"
                android:textColor="#ffffff"
                android:textStyle="bold|italic" />

            <TextView
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/storyTV"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="20dp"
                android:textColor="#ffffff"
                android:layout_marginBottom="30dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="200dp"
                android:layout_marginBottom="30dp"
                android:layout_height="200dp"
                android:gravity="center"
                android:layout_gravity="center">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button3"
                    android:background="@drawable/not_watched_red" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
